# django-service-layer-tutorial

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml  logstash.conf  main.py  pyproject.toml
.run/: RunELK.run.xml  runServer.run.xml
src/apps/customer/: admin.py  apps.py  models.py
src/apps/customer/migrations/: 0001_initial.py
src/apps/product/: admin.py  apps.py  enums.py  exceptions.py  models.py  permissions.py  serializers.py  urls.py  views.py
src/apps/product/migrations/: 0001_initial.py  0002_product_count_product_status_alter_product_title.py  0003_alter_product_count.py
src/apps/product/services/: __init__.py  buy_product_service.py
src/apps/product/services/dtos/: __init__.py  buy_product_dto.py
src/config/: container.py  settings.py  urls.py
src/core/service/: __init__.py  dtos.py  handle_error.py
utils/: .env.example  populate_kibana_logs.py
