[project]
name = "django-service-layer-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.1",
    "django-stubs>=5.2.8",
    "djangorestframework>=3.16.1",
    "punq>=0.7.0",
    "python-dotenv>=1.2.1",
    "python-json-logger>=4.0.0",
    "requests>=2.32.5",
]
